--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
         <div class="container">
             <h1>Select Animal</h1>
         </div>
-    </div>
-
-    <div class="container">
-
-        <!-- Button area  -->
-        <div id="buttons-area"></div>
 
         <!-- Action Submission Form  -->
         <form id="animal-form">
-            <div class="input-group mt-4 mx-auto">
+            <div class="input-group mb-2 mx-auto">
                 <input type="text" id="animal-input" class="form-control" placeholder="Add an Animal">
                 <button id="add-animal" type="submit" value="Add animal">Submit</button>
             </div>
         </form>
+
+        <!-- Button area  -->
+        <div id="buttons-area"></div>
+    </div>
+
+    <div class="container">
         <!-- Animal images area -->
         <div class=" row col-12 col-sm-12 col-md-12 col-lg-12 ml-auto">
             <div id="animal-view"></div>
